# Tetris-C

./: .gitignore  CMakeLists.txt  README.md  readme.md
include/: audio.h  board.h  constants.h  game.h  input.h  menu.h  render.h  settings.h  shapes.h  types.h
src/: ._main.c  audio.c  board.c  constants.c  game.c  input.c  main.c  menu.c  render.c  settings.c  shapes.c
